<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1eE-ET-Xii">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
        <capability name="Image references" minToolsVersion="12.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Random Photo VC-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="MainVC" title="Random Photo VC" id="BYZ-38-t0r" customClass="ViewController" customModule="RandomPhotoApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="769"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="MainScreenAccId" label="MainScreenAccId">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                    </view>
                    <tabBarItem key="tabBarItem" title="Any Photo" id="ZPf-De-LcE">
                        <imageReference key="image" image="photo.artframe" catalog="system" renderingMode="original" variableValue="1"/>
                    </tabBarItem>
                    <navigationItem key="navigationItem" title="Random Photo " id="IZ6-VK-Fez" userLabel="Random Photo"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="907.63358778625945" y="-27.464788732394368"/>
        </scene>
        <!--Tab Bar-->
        <scene sceneID="XOc-B5-EUD">
            <objects>
                <tabBarController title="Tab Bar" id="1eE-ET-Xii" sceneMemberID="viewController">
                    <tabBar key="tabBar" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="dn6-TR-Llj">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="selectedImageTintColor" systemColor="systemMintColor"/>
                    </tabBar>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="Fg2-Yc-5ir"/>
                        <segue destination="dEi-Wg-oNR" kind="relationship" relationship="viewControllers" id="4Ox-8w-gXR"/>
                        <segue destination="ayc-lh-hWl" kind="relationship" relationship="viewControllers" id="fXT-bF-l0j"/>
                    </connections>
                </tabBarController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="iXf-qb-syz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1804" y="-798"/>
        </scene>
        <!--Random Cat VC-->
        <scene sceneID="i62-fY-Hk2">
            <objects>
                <viewController storyboardIdentifier="CatsVC" title="Random Cat VC" id="dEi-Wg-oNR" customClass="CatsViewController" customModule="RandomPhotoApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="CAV-lJ-C5e">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="769"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Cats.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="Kmj-ke-rLv">
                                <rect key="frame" x="-19" y="-8" width="472" height="904"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            </imageView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="jK2-8c-Cjf"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Cats" image="cat" catalog="system" id="eCL-bt-9Jg"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Lag-MO-fOg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1803.8167938931297" y="-27.464788732394368"/>
        </scene>
        <!--Random Dog VC-->
        <scene sceneID="nWf-I5-zL0">
            <objects>
                <viewController storyboardIdentifier="DogsVC" title="Random Dog VC" id="ayc-lh-hWl" customClass="DogsViewController" customModule="RandomPhotoApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="igL-mz-XeH">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="769"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Dogs.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="5MT-Ll-LQv">
                                <rect key="frame" x="0.0" y="0.0" width="494" height="876"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            </imageView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="zJ1-0W-osQ"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Dogs" image="dog" catalog="system" id="GIw-p0-sCp"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="6jT-TK-5pU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2577.8625954198474" y="-27.464788732394368"/>
        </scene>
        <!--Info Bottom Sheet VC-->
        <scene sceneID="8z8-Iv-8W8">
            <objects>
                <viewController storyboardIdentifier="InfoBottomSheetVC" title="Info Bottom Sheet VC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="9DG-Dx-man" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="aWC-dK-ORc">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <viewLayoutGuide key="safeArea" id="rNh-BZ-X2t"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ncA-3g-kEi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-182.44274809160305" y="-27.464788732394368"/>
        </scene>
    </scenes>
    <resources>
        <image name="Cats.jpg" width="626" height="626"/>
        <image name="Dogs.jpg" width="146.8800048828125" height="146.8800048828125"/>
        <image name="cat" catalog="system" width="128" height="102"/>
        <image name="dog" catalog="system" width="128" height="99"/>
        <image name="photo.artframe" catalog="system" width="128" height="93"/>
        <systemColor name="systemMintColor">
            <color red="0.0" green="0.78039215689999997" blue="0.74509803919999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
