...
    
    // ImageView for photo
    internal let imageView: UIImageView = {
        let imageView = UIImageView()
        imageView.contentMode = .scaleAspectFill
        imageView.backgroundColor = .white
        imageView.accessibilityIdentifier = "MainImageViewIdentifier"
        
        // Borders for imageView
        imageView.layer.borderWidth = 4
        imageView.layer.borderColor = UIColor.systemMint.cgColor
        imageView.layer.cornerRadius = 12
        imageView.clipsToBounds = true
...
            imageView.widthAnchor.constraint(equalTo: view.widthAnchor, multiplier: 0.93), // 93% of the parent view's width
            imageView.heightAnchor.constraint(equalTo: view.heightAnchor, multiplier: 0.57), // 57% of the parent view's height
            imageView.centerXAnchor.constraint(equalTo: view.centerXAnchor),
            imageView.centerYAnchor.constraint(equalTo: view.centerYAnchor, constant: -20)
        ])
        
        if ProcessInfo.processInfo.environment["UITestModeError"] != "true" { // Special condition for test environment to not download the photo if testing errors
            getRandomPhoto()
        }
        
        view.addSubview(label)
        // Setting constraints to position the label in the top-left corner
        NSLayoutConstraint.activate([
...
            }
        }.resume() // Starting the task
    }
    
    func showErrorAlert(message: String) {
        let alertController = UIAlertController(title: "Something went wrong", message: message, preferredStyle: .alert)
        alertController.addAction(UIAlertAction(title: "OK", style: .default))
        alertController.view.accessibilityIdentifier = "ErrorAlertIdentifier"
        
        // Finding the first active UIWindowScene and its window to present alert
        if let windowScene = UIApplication.shared.connectedScenes.first as? UIWindowScene,
           let window = windowScene.windows.first,
           let currentViewController = window.rootViewController {
...
