...
        // Check if the app is running in a test environment for error
        if ProcessInfo.processInfo.environment["UITestModeError"] == "true" {
            setupMockSession(isSuccess: false)
        }
        
        // Check if the app is running in a test environment for success
        if ProcessInfo.processInfo.environment["UITestModeSuccess"] == "true" {
            setupMockSession(isSuccess: true)
        }
        
        // Handling deeplink if the app is being launched via a URL
        if let url = connectionOptions.urlContexts.first?.url {
            handleDeeplink(url: url)
...
