...
    
    // ImageView for photo
    internal let imageView: UIImageView = {
        let imageView = UIImageView()
        imageView.contentMode = .scaleAspectFill
        imageView.backgroundColor = .systemMint
        imageView.accessibilityIdentifier = "CatsImageViewIdentifier"
        
        // Borders for imageView
        imageView.layer.borderWidth = 4
        imageView.layer.borderColor = UIColor.systemMint.cgColor
        imageView.layer.cornerRadius = 12
        imageView.clipsToBounds = true
...
